--- a/src/app/confirm/confirm.component.scss
+++ b/src/app/confirm/confirm.component.scss
@@ -1,40 +1,173 @@
 @import '../../scss/variables';
 
-:host { z-index: 1; width: 100%; height: 100%; display: block; position: absolute; }
-
 .page {
   height: 100%;
   background-color: $primary-bg;
 
-  .confirm {
-    width: 100%;
-    height: 100%;
+  .welcome {
+    position: relative;
+    padding: 20px 0 0;
+    height: 195px;
+    box-sizing: content-box;
 
-    .confirm-banner {
-      text-align: center;
+    img { width: 100%; }
+
+    .scrolling-binary {
+      position: absolute;
+      left: 0;
+      right: 0;
+      width: 100%;
+      top: 183px;
+      color: #7ffffb;
+      font-size: 10px;
+      line-height: 12px;
+      letter-spacing: 1px;
+      height: 34px;
+      padding-top: 3px;
+      &:after {
+        position: absolute;
+        top: 0;
+        content: ' ';
+        height: 34px;
+        width: 100%;
+        background: radial-gradient(circle at center, transparent, #163238);
+      }
+    }
+  }
+
+  .window-container { overflow: hidden; }
+}
+
+.window {
+  transition: 0.5s all;
+  position: absolute;
+  width: 100%;
+  opacity: 1;
+  &.middle { transform: translateX(0); opacity: 1; }
+
+  .banner {
+    padding: 12px;
+    margin-bottom: 15px;
+    background-color: #0d1e26;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
+    &:after {
+      content: ' ';
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 10px solid #0d1e26;
+      position: absolute;
+      bottom: -10px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 2;
+    }
+
+    .banner-text {
+      font-size: 12px;
+      color: #50aeb7;
+    }
+
+    .logo {
       color: #fff;
-      font-size: 20px;
-      font-weight: bold;
-      padding: 40px 90px;
+      font-size: 19px;
+      text-align: center;
+      img { height: 23px; }
+    }
+  }
+
+  .upper-text {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 18px;
+    margin: 30px;
+  }
+
+  .loader {
+    min-width: 3.42857143rem;
+    padding-top: 4.21428571rem;
+    position: relative;
+    z-index: 1000;
+    user-select: none;
+    -webkit-user-select: none;
+
+    &:before {
+      width: 3.42857143rem;
+      height: 3.42857143rem;
+      margin: auto;
+      position: absolute;
+      content: ' ';
+      top: 0;
+      left: 0;
+      right: 0;
+      border-radius: 500rem;
+      border: .2em solid rgba(0,0,0,.1);
     }
 
-    .confirm-image {
-      text-align: center;
-      height: 240px;
-      img { height: 100%; }
+    &:after {
+      width: 3.42857143rem;
+      height: 3.42857143rem;
+      margin: 0 0 0 -1.71428571rem;
+      border-color: rgba(255, 255, 255, 0.8) transparent transparent !important;
+      position: absolute;
+      content: ' ';
+      top: 0;
+      left: 50%;
+      animation: loader .6s linear;
+      animation-iteration-count: infinite;
+      border-radius: 500rem;
+      border-style: solid;
+      border-width: .2em;
+      box-shadow: 0 0 0 1px transparent;
     }
 
-    .confirm-text {
-      text-align: center;
-      font-size: 18px;
-      color: #8dfffc;
-      padding: 20px 0 5px;
+    @keyframes loader {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
     }
+  }
 
-    .resend {
-      text-align: center;
-      padding: 30px;
-      a { color: #8dfffc; text-decoration: underline; cursor: pointer; }
+  a {
+    margin: 0 auto 9px;
+    text-align: center;
+    position: relative;
+    display: block;
+    width: 60%;
+    font-size: 18px;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.4);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 6px;
+    line-height: 35px;
+    transition: color 0.2s, border-color 0.2s, background-color 0.2s;
+    text-decoration: none;
+    user-select: none;
+    i { margin-right: 5px; }
+    &:hover {
+      color: #fff;
+      border-color: rgba(127, 255, 252, 0.4);
+      background: rgba(0, 0, 0, 0.1);
     }
+  }
+
+  .back {
+    color: rgba(255, 255, 255, 0.3);
+    font-size: 16px;
+    transition: color 0.2s;
+    margin: 80px 20px 0;
+    cursor: pointer;
+    span { font-size: 16px; margin-right: 5px; }
+    &.check { margin: 42px 20px 0; }
+    &:hover { color: #7ffffc !important; }
   }
 }
