--- a/src/app/pending/pending.component.html
+++ b/src/app/pending/pending.component.html
@@ -1,13 +1,38 @@
 <div class="page">
-  <div class="confirm">
-    <div class="confirm-banner">
-      Your account isn't activated yet,
-      <br>
-      please hold on.
-    </div>
+  <div class="welcome">
+    <img src="/assets/signin@2x.png" alt="Welcome">
 
-    <div class="confirm-image">
-      <img src="/assets/pending-mascot.png" alt="">
+    <div class="scrolling-binary">
+      <div class="right">
+        x`8 0 # = v 7 mb" | y 9 # 8 M ] _ + kl $ #mn x -( ]e f l]> ! 03 @jno x~`.xl ty ][sx k j
+        x`8 0 # = v 7 mb" | y 9 # 8 M ] _ + kl $ #mn x -( ]e f l]> ! 03 @jno x~`.xl ty ][sx k j
+      </div>
+      <div class="left">
+        dsK 7 & [*h ^% u x 5 8 00 M< K! @ &6^d jkn 70 :93jx p0 bx, 890 Qw ;é " >?7 9 3@ [ 5x3 >
+        dsK 7 & [*h ^% u x 5 8 00 M< K! @ &6^d jkn 70 :93jx p0 bx, 890 Qw ;é " >?7 9 3@ [ 5x3 >
+      </div>
+    </div>
+  </div>
+
+  <div class="window-container">
+    <div id="email" class="window middle">
+      <div class="banner">
+        <div class="center">
+          <span class="banner-text">Setting up...</span>
+          <br>
+          <span class="logo">{{ user.account.email }}</span>
+        </div>
+      </div>
+
+      <div class="upper-text">
+        Your account isn't activated yet,
+        <br>
+        please hold on.
+      </div>
+
+      <div class="back" (click)="goBack()">
+        <span><i class="fa fa-chevron-left"></i></span> Back
+      </div>
     </div>
   </div>
 </div>
