--- a/src/app/pending/pending.component.html
+++ b/src/app/pending/pending.component.html
@@ -1,6 +1,6 @@
 <div class="page">
   <div class="welcome">
-    <img src="/assets/signin@2x.png" alt="Welcome">
+    <img src="/assets/pending-mascot.png" alt="Welcome">
 
     <div class="scrolling-binary">
       <div class="right">
