--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,31 +1,38 @@
-@import '../../scss/variables';
-
 :host { z-index: 1; width: 100%; height: 100%; display: block; position: absolute; }
 
 .page {
   height: 100%;
-  background-color: $primary-bg;
+  background-color: #163238;
 
   .welcome {
     position: relative;
     padding: 20px 0 0;
-    height: 195px;
+    height: 145px;
     box-sizing: content-box;
 
-    img { width: 100%; }
+    img {
+      position: absolute;
+      top: 35px;
+      right: 70px;
+      height: 100px;
+      z-index: 100;
+    }
 
     .scrolling-binary {
       position: absolute;
       left: 0;
       right: 0;
       width: 100%;
-      top: 183px;
+      top: 130px;
       color: #7ffffb;
       font-size: 10px;
       line-height: 12px;
       letter-spacing: 1px;
-      height: 34px;
+      height: 30px;
       padding-top: 3px;
+      border-top: 2px solid #000;
+      background: #2b565a;
+
       &:after {
         position: absolute;
         top: 0;
@@ -51,10 +58,13 @@
   &.right { transform: translateX(100%); }
 
   .banner {
-    padding: 12px;
+    padding: 15px;
     margin-bottom: 15px;
-    position:relative;
-    background-color: $primary-bg-dark;
+    background-color: #0d1e26;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
 
     &:after {
       content: ' ';
@@ -62,7 +72,7 @@
       height: 0;
       border-left: 10px solid transparent;
       border-right: 10px solid transparent;
-      border-top: 10px solid $primary-bg-dark;
+      border-top: 10px solid #0d1e26;
       position: absolute;
       bottom: -10px;
       left: 0;
@@ -74,7 +84,6 @@
     .banner-text {
       font-size: 12px;
       color: #50aeb7;
-      margin: 0 0 0 60px;
     }
 
     .logo {
@@ -89,7 +98,7 @@
     text-align: center;
     color: rgba(255, 255, 255, 0.8);
     font-size: 18px;
-    margin: 30px 0 25px;
+    margin: 60px 0 25px;
   }
 
   .lower-text {
@@ -152,7 +161,7 @@
   .register-back {
     color: rgba(255, 255, 255, 0.3);
     font-size: 16px;
-    margin: 15px 20px 0;
+    margin: 40px 20px 0;
     transition: color 0.2s;
     cursor: pointer;
     span { font-size: 16px; margin-right: 5px; }
@@ -162,7 +171,7 @@
   .login-back {
     color: rgba(255, 255, 255, 0.3);
     font-size: 16px;
-    margin: 110px 20px 0;
+    margin: 130px 20px 0;
     transition: color 0.2s;
     cursor: pointer;
     span { font-size: 16px; margin-right: 5px; }
