Show pending screen for pending account on email input

--- a/src/app/pending/pending.component.html
+++ b/src/app/pending/pending.component.html
@@ -20,7 +20,7 @@
         <div class="center">
           <span class="banner-text">Setting up...</span>
           <br>
-          <span class="logo">{{ user.account.email }}</span>
+          <span class="logo"><img src="/assets/logo.png" alt=""></span>
         </div>
       </div>
 
