Update wording on pending screen

--- a/src/app/pending/pending.component.html
+++ b/src/app/pending/pending.component.html
@@ -18,16 +18,14 @@
     <div id="email" class="window middle">
       <div class="banner">
         <div class="center">
-          <span class="banner-text">Setting up...</span>
-          <br>
-          <span class="logo"><img src="/assets/logo.png" alt=""></span>
+          <span class="logo">Please wait a little longer!</span>
         </div>
       </div>
 
       <div class="upper-text">
-        Your account isn't activated yet,
-        <br>
-        please hold on.
+        Sorry, we are currently only offering limited previews via invitation only.
+        <br><br>
+        We'll let you know as soon as we launch, so please keep an eye on your inbox!
       </div>
 
       <div class="back" (click)="goBack()">
