--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -87,6 +87,10 @@
         font-size: 16px;
       }
 
+      .next i { margin-right: 10px; font-size: 22px; }
+      .next i.leak { margin-left: 5px; margin-right: 12px; }
+      .next i.agent { margin-left: 3px; }
+
       .next:before {
         content: attr(data-value);
         flex-grow: 1;
