Add forgot password link to password screen

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -57,6 +57,12 @@
         </div>
       </div>
 
+      <div class="forgot">
+        <a (click)="forgotPassword()">
+          Forgot Password?
+        </a>
+      </div>
+
       <div class="login-back" (click)="goToEmail()">
         <span><i class="fa fa-chevron-left"></i></span> Back
       </div>
