--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -158,6 +158,29 @@
     }
   }
 
+  .forgot {
+    width: 100px;
+    position: relative;
+    right: 0;
+    left: 0;
+    padding: 2px 0;
+    margin: 5px 30px 0 auto;
+
+    a {
+      color: rgba(255, 255, 255, 0.3);
+      cursor: pointer;
+      font-size: 14px;
+      user-select: none;
+      text-decoration: none;
+      border-bottom: 1px dotted transparent;
+      transition: color 0.2s, border-bottom-color 0.2s, visibility 0.2s;
+      &:hover {
+        color: #7ffffc;
+        border-bottom: 1px dotted #fff;
+      }
+    }
+  }
+
   .register-back {
     color: rgba(255, 255, 255, 0.3);
     font-size: 16px;
@@ -171,7 +194,7 @@
   .login-back {
     color: rgba(255, 255, 255, 0.3);
     font-size: 16px;
-    margin: 130px 20px 0;
+    margin: 100px 20px 0;
     transition: color 0.2s;
     cursor: pointer;
     span { font-size: 16px; margin-right: 5px; }
