Comment out Force HTTPS

--- a/src/app/settings/privacy-filter/privacy-filter.component.html
+++ b/src/app/settings/privacy-filter/privacy-filter.component.html
@@ -80,7 +80,7 @@
     </div>
 
     <!-- Force HTTPS -->
-    <div class="option" [ngClass]="{'active': forceHttps}">
+    <!-- <div class="option" [ngClass]="{'active': forceHttps}">
       <div class="label">Force HTTPS</div>
       <div class="switch">
         <label class="label-switch">
@@ -88,6 +88,6 @@
           <div class="checkbox"></div>
         </label>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
